@@ -1,5 +1,6 @@
 package com.dvv.gmailSafe.google;
 
+import com.dvv.gmailSafe.entities.Backup;
 import com.google.api.client.auth.oauth2.Credential;
 import com.google.api.client.extensions.java6.auth.oauth2.AuthorizationCodeInstalledApp;
 import com.google.api.client.extensions.jetty.auth.oauth2.LocalServerReceiver;
@@ -12,8 +13,8 @@ import com.google.api.client.json.jackson2.JacksonFactory;
 import com.google.api.client.util.store.FileDataStoreFactory;
 import com.google.api.services.gmail.Gmail;
 import com.google.api.services.gmail.GmailScopes;
-import com.google.api.services.gmail.model.Label;
-import com.google.api.services.gmail.model.ListLabelsResponse;
+import com.google.api.services.gmail.model.ListMessagesResponse;
+import com.google.api.services.gmail.model.Message;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -22,19 +23,29 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.security.GeneralSecurityException;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 
-public class GmailQuickstart {
+public enum GmailSimpleController {
+	INSTANCE;
+	
     private static final String APPLICATION_NAME = "GmailSafe";
     private static final JsonFactory JSON_FACTORY = JacksonFactory.getDefaultInstance();
     private static final String TOKENS_DIRECTORY_PATH = "tokens";
-
+    private static final int LIMIT = 10;
+    
     /**
      * Global instance of the scopes required by this quickstart.
      * If modifying these scopes, delete your previously saved tokens/ folder.
      */
-    private static final List<String> SCOPES = Collections.singletonList(GmailScopes.GMAIL_LABELS);
+    private static final List<String> SCOPES = List.of(GmailScopes.GMAIL_READONLY, GmailScopes.GMAIL_LABELS);
+
+	private String credentialsFilePath;
+
+	public void setCredentialsFilePath(String credentialsFilePath) {
+		this.credentialsFilePath = credentialsFilePath;
+	}
+    
 
     /**
      * Creates an authorized Credential object.
@@ -42,7 +53,7 @@ public class GmailQuickstart {
      * @return An authorized Credential object.
      * @throws IOException If the credentials.json file cannot be found.
      */
-    private static Credential getCredentials(final NetHttpTransport HTTP_TRANSPORT, String credentialsFilePath) throws IOException {
+    private Credential getCredentials(final NetHttpTransport HTTP_TRANSPORT, String credentialsFilePath) throws IOException {
         // Load client secrets.
     	File credentialsFile = new File(credentialsFilePath);
     	if (!credentialsFile.exists()) {
@@ -61,22 +72,34 @@ public class GmailQuickstart {
         return new AuthorizationCodeInstalledApp(flow, receiver).authorize("user");
     }
 
-    public static void main(String... args) throws IOException, GeneralSecurityException {
-    	String credentialsFilePath = null;
-    	if (args.length > 0) {
-    		credentialsFilePath = args[0];
-    	} else {
-    		return;
-    	}
+    public boolean load(Backup backup) throws IOException, GeneralSecurityException {
     	
-    	// Build a new authorized API client service.
     	final NetHttpTransport HTTP_TRANSPORT = GoogleNetHttpTransport.newTrustedTransport();
         Gmail service = new Gmail.Builder(HTTP_TRANSPORT, JSON_FACTORY, getCredentials(HTTP_TRANSPORT, credentialsFilePath))
                 .setApplicationName(APPLICATION_NAME)
                 .build();
 
-        // Print the labels in the user's account.
-        String user = "me";
+    	ListMessagesResponse response = service.users().messages().list("me").execute();
+
+    	List<Message> messages = new ArrayList<Message>();
+        while (response.getMessages() != null && messages.size() < LIMIT) {
+             messages.addAll(response.getMessages());
+             if (response.getNextPageToken() != null) {
+                 String pageToken = response.getNextPageToken();
+                 response = service.users().messages().list("me").setPageToken(pageToken).execute();
+             } else {
+                 break;
+             }
+        }
+        
+        for (Message message : messages) {
+            Message fullContent = service.users().messages().get("me", message.getId()).setFormat("full").execute();
+            backup.getMessages().add(fullContent);
+        }    	
+        
+        return true;
+        
+        /*
         ListLabelsResponse listResponse = service.users().labels().list(user).execute();
         List<Label> labels = listResponse.getLabels();
         if (labels.isEmpty()) {
@@ -87,5 +110,7 @@ public class GmailQuickstart {
                 System.out.printf("- %s\n", label.getName());
             }
         }
+        */
+        
     }
 }
